Added a modal window in index

--- a/WebPage/index.html
+++ b/WebPage/index.html
@@ -27,7 +27,15 @@
 
 </head>
 <body>
-    <script src="../js/index.js"></script>
+    
+    <div id="modal" class="home__notification-background">
+        <div class="home__notification">
+            <button id="notification-btn">X</button>
+            <h3 class="notification__title">
+                Please <strong>log in</strong> or <strong>sign up</strong> to continue!
+            </h3>
+        </div>
+    </div>
     <header class="header--home">
         <div class="header--home__title_container">
             <h1 class="header--home__title">
@@ -46,5 +54,6 @@
     <div class="home--image_container">
         <img class="home--image" src="../assets/dominic-kurniawan-suryaputra-EhGw-i_Eamg-unsplash.jpg" alt="Students siting on grass at their campus">
     </div>
+    <script src="../js/index.js"></script>
 </body>
 </html>
