Color option added

--- a/WebPage/dashboard.html
+++ b/WebPage/dashboard.html
@@ -90,12 +90,9 @@
                         </div>
                         <div class="grid_item__selector">
                         <h4 class="grid_item__selector_title">
-                                Type
+                                Color
                             </h4>
-                            <select id="subject-type" name="typeSession">
-                                <option value="theory">Theory </option>
-                                <option value="practical">Practical</option>
-                            </select>
+                            <input id="subject-color" type="color">
                         </div>
                     </div>
                 
